set(SHADERC_SKIP_INSTALL true)
set(SHADERC_SKIP_TESTS true)
set(SHADERC_SKIP_EXAMPLES true)
set(SHADERC_ENABLE_SHARED_CRT ON)
set(SPIRV_HEADERS_ENABLE_EXAMPLES OFF)
set(SPIRV_HEADERS_ENABLE_INSTALL OFF)
add_subdirectory(SPIRV-Headers EXCLUDE_FROM_ALL)
add_subdirectory(SPIRV-Tools EXCLUDE_FROM_ALL)
add_subdirectory(glslang EXCLUDE_FROM_ALL)
add_subdirectory(shaderc EXCLUDE_FROM_ALL)
add_library(easy_shaderc::shaderc ALIAS shaderc)